# algorithms-3rd-semester

./: Условия_лабораторных_работ_1_семестр_2022.docx
lab1/: CMakeLists.txt  main.cpp
lab10/: CMakeLists.txt  main.cpp
lab11/: CMakeLists.txt  main.cpp
lab12/: CMakeLists.txt  Source.cpp
lab12/data/: main.txt  out.txt
lab13/: main.cpp
lab13/data/: input.txt  out.txt
lab14/: CMakeLists.txt  main.cpp
lab14/data/: out.txt
lab15/: CMakeLists.txt  main.cpp
lab16/: CMakeLists.txt  main.cpp
lab17/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt  main.cpp
lab6/: CMakeLists.txt  main.cpp
lab7/: CMakeLists.txt  main.cpp
lab8/: CMakeLists.txt  main.cpp
lab9/: CMakeLists.txt  main.cpp
